  <menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
      android:id="@+id/action_menu"
      tools:context="com.example.scriptmanager.MainActivity">
    <item
        android:tooltipText="open settings"
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings_page_title"
        app:showAsAction="never" />
      <item
          android:visible="false"
          android:id="@+id/action_stopselected"
          android:orderInCategory="100"
          android:title="@string/settings_stopselected"
          app:showAsAction="never" />
      <item
          android:visible="false"
          android:id="@+id/action_anyselection_delete"
          android:orderInCategory="100"
          android:title="@string/settings_anyselection_delete"
          app:showAsAction="never" />
      <item
          android:id="@+id/action_stopall"
          android:orderInCategory="100"
          android:title="@string/settings_stopall"
          android:visible="false"
          app:showAsAction="never" />
      <item
          android:visible="false"
          android:id="@+id/action_unselectall"
          android:orderInCategory="100"
          android:title="@string/settings_unselectall"
          app:showAsAction="never" />
      <item
          android:visible="false"
          android:id="@+id/action_oneonly_edit"
          android:orderInCategory="100"
          android:title="@string/settings_oneonly_edit"
          app:showAsAction="never" />
      <item
          android:visible="false"
          android:id="@+id/action_oneonly_show_log"
          android:orderInCategory="100"
          android:title="@string/settings_oneonly_show_log"
          app:showAsAction="never" />
    <item
        android:visible="false"
        android:id="@+id/action_oneonly_clear_log"
        android:orderInCategory="100"
        android:title="@string/settings_oneonly_clear_log"
        app:showAsAction="never" />
       <item
           android:visible="false"
           android:id="@+id/action_oneonly_rename"
           android:orderInCategory="100"
           android:title="@string/settings_oneonly_rename"
           app:showAsAction="never" />
      <!-- Because of scoped storage features, android 10 and 11 become more and more complicated -->
      <item
          android:visible="false"
          android:id="@+id/action_browse_scripts"
          android:orderInCategory="100"
          android:title="@string/settings_browse_scripts"
          app:showAsAction="never" />
      <item
          android:visible="true"
          android:id="@+id/action_import_script"
          android:orderInCategory="100"
          android:title="@string/settings_import_script"
          app:showAsAction="never" />

      <item
          android:visible="true"
          android:id="@+id/action_test_button"
          android:orderInCategory="100"
          android:title="Test"
          app:showAsAction="never" />
      <item
          android:visible="true"
          android:id="@+id/action_test_button2"
          android:orderInCategory="100"
          android:title="Test2"
          app:showAsAction="never" />
  </menu>